# aws-dsql-auth

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: build-and-test.yml
include/aws/dsql-auth/: auth_token.h  exports.h
source/: auth_token.c  dsql_token.c
tests/: CMakeLists.txt  auth_token_tests.c
